starting refacto client code

--- a/client/core/control.html
+++ b/client/core/control.html
@@ -1,4 +1,4 @@
-<div style="background-image: url('https://i.imgur.com/YtXBtwI.png'); background-repeat: no-repeat; background-size: cover; background-position: center center; height: 720px; margin-top: -102px;">
+<div class="scanner_background">
 
 
 <p>Bonjour, vous êtes dans l'interface de control</p>
