--- a/client/core/home.html
+++ b/client/core/home.html
@@ -3,9 +3,9 @@
 
     <div style="display: flex; justify-items: center; align-items: center; flex-direction: column;">
         <h1> Bienvenu sur WC Scanner</h1>
-        <img src="icons/png/512x512.png"/>
+        <img src="assets/images/icons/png/512x512.png"/>
         <div>
-            <img src="icons/assets/google-play-badge.png" width="140" height="65"/>
+            <img src="assets/images/google-play-badge.png" width="140" height="65"/>
         </div>
     </div>
 
