--- a/client/core/navbar.html
+++ b/client/core/navbar.html
@@ -32,7 +32,7 @@
                 <span class="fas fa-users fa-2x text-white"></span>
             </button>
             <div aria-labelledby="dropdownMenuButton" class="dropdown-menu dropdown-menu-right">
-                <a class="dropdown-item" href="#">0 personne connecter </a>
+                <a class="dropdown-item" href="#">0 Connected person </a>
             </div>
         </div>
         <div class="btn-group">
@@ -41,7 +41,7 @@
                 <span class="fas fa-wifi fa-2x" id="onlineContent" style="color: white" type="onlineIcon"></span>
             </button>
             <div aria-labelledby="dropdownMenuButtonOnline" class="dropdown-menu dropdown-menu-right">
-                <a class="dropdown-item" href="#">Addresse Ip :</a>
+                <a class="dropdown-item" href="#">IP Address :</a>
             </div>
         </div>
         <div class="btn-group">
@@ -50,7 +50,7 @@
                 <span class="fas fa-download fa-2x" style="color: white"></span>
             </button>
             <div aria-labelledby="dropdownMenuButtonDownload" class="dropdown-menu dropdown-menu-right">
-                <a class="dropdown-item" href="#">&#x1F43C Pas de téléchargement &#x1F43C</a>
+                <a class="dropdown-item" href="#">&#x1F43C No download &#x1F43C</a>
             </div>
         </div>
         <div class="btn-group">
@@ -59,7 +59,7 @@
                 <span class="fas fa-wrench fa-2x text-white"></span>
             </button>
             <div aria-labelledby="dropdownMenuButtonSetting" class="dropdown-menu dropdown-menu-right">
-                <a class="dropdown-item" href="#">Build en cour : </a>
+                <a class="dropdown-item" href="#">Build in progress : </a>
             </div>
         </div>
     </nav>
