--- a/client/core/project_element.html
+++ b/client/core/project_element.html
@@ -9,7 +9,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="{{project_name}}_modalLabel">Telechargement du projet</h5>
+        <h5 class="modal-title" id="{{project_name}}_modalLabel">Download project</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">×</span>
         </button>
@@ -34,7 +34,7 @@
 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
         <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
