--- a/client/core/control.html
+++ b/client/core/control.html
@@ -1,7 +1,7 @@
 <div class="scanner_background">
 
 
-<p>Bonjour, vous êtes dans l'interface de control</p>
+<p>Bonjour, vous êtes dans l'interface de contrôle</p>
 
     <div class="row" style="padding-top: 150px">
     <div class="col-md-4">
