adding scanner homepage image

--- a/client/core/home.html
+++ b/client/core/home.html
@@ -1,9 +1,8 @@
-<div class="wrapper"; style="display: flex; flex-flow: row wrap; align-items: center; text-align: center;"; >
+<div class="wrapper scanner_background_2"; style="display: flex; flex-flow: row wrap; align-items: center; text-align: center;"; >
 
 
     <div class="main"; style="order: 2; flex: 2 0px;">
-        <h1> Welcome on WC-Scanner</h1>
-        <img src="assets/images/icons/png/512x512.png"/>
+        <h1>Welcome on WC-Scanner</h1>
 
         <div>
             <img src="assets/images/google-play-badge.png" width="140" height="65"/>
