--- a/client/core/home.html
+++ b/client/core/home.html
@@ -30,7 +30,7 @@
         </div>
 
         <div>
-            <a href="https://github.com/Mahe-Thomas/WC-Scanner">
+            <a href="https://github.com/Mahe-Thomas/WC-Scanner" target="_blank">
                 <i class="fab fa-github" style="font-size: 2em"></i> GitHub
             </a>
         </div>
