--- a/client/core/project.html
+++ b/client/core/project.html
@@ -1,48 +1,67 @@
+<div class="container" style="padding-top: 20px">
 
+    <div class="container">
 
-    <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary btn-outline-primary btn-lg btn-block" data-toggle="modal" data-target="#ModalProject">
-        Create new project
-    </button>
-    <input class="form-control" id="search_input" type="text" placeholder="Search..">
+        <div class="row">
+
+            <div class="col-6">
+                <!-- Button trigger modal -->
+                <button class="btn btn-primary btn-outline-primary btn-lg btn-block" data-target="#ModalProject" data-toggle="modal"
+                        type="button">
+                    Create new project
+                </button>
+            </div>
+
+            <div class="col-6">
+                <input class="form-control" id="search_input" placeholder="Search.." type="text">
+            </div>
+        </div>
+        <hr class="my-4">
+    </div>
+
 
     <!-- Modal -->
-    <div class="modal fade" id="ModalProject" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="ModalProject" role="dialog"
+         tabindex="-1">
         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLongTitle">Project configuration</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button aria-label="Close" class="close" data-dismiss="modal" type="button">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
                     <form>
-                    <div class="form-group">
-                        <label for="project_name">Project name</label>
-                        <input type="text" class="form-control" id="project_name" placeholder="my_project">
-                    </div>
-                    <div class="form-group">
-                        <label for="project_description">Description</label>
-                        <textarea class="form-control" id="project_description" rows="3"></textarea>
-                    </div>
+                        <div class="form-group">
+                            <label for="project_name">Project name</label>
+                            <input class="form-control" id="project_name" placeholder="my_project" type="text">
+                        </div>
+                        <div class="form-group">
+                            <label for="project_description">Description</label>
+                            <textarea class="form-control" id="project_description" rows="3"></textarea>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="project_ppr">Pictures per complete rotation</label>
-                        <div class="row">
-                            <div class="col-lg-8">
-                                <input type="range" class="form-control" id="project_ppr" min="10" max="36" value="15" onchange="update_ppr_placeholder()" oninput="update_ppr_placeholder()">
-                            </div>
-                            <div class="col-lg-4">
-                                <h4 id="ppr_placeholder">15</h4>
+                        <div class="form-group">
+                            <label for="project_ppr">Pictures per complete rotation</label>
+                            <div class="row">
+                                <div class="col-lg-8">
+                                    <input class="form-control" id="project_ppr" max="36" min="10" onchange="update_ppr_placeholder()"
+                                           oninput="update_ppr_placeholder()" type="range"
+                                           value="15">
+                                </div>
+                                <div class="col-lg-4">
+                                    <h4 id="ppr_placeholder">15</h4>
+                                </div>
                             </div>
                         </div>
-                    </div>
                         <div class="form-group">
                             <label for="project_pres">Pictures resolution</label>
                             <div class="row">
                                 <div class="col-lg-8">
-                                    <input type="range" class="form-control" id="project_pres" min="1" max="3" value="2" step="1" onchange="update_pres_placeholder(this.value)" oninput="update_pres_placeholder(this.value)">
+                                    <input class="form-control" id="project_pres" max="3" min="1" onchange="update_pres_placeholder(this.value)" oninput="update_pres_placeholder(this.value)"
+                                           step="1" type="range"
+                                           value="2">
                                 </div>
                                 <div class="col-lg-4">
                                     <h4 id="pres_placeholder">1640x1232</h4>
@@ -57,14 +76,14 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="create_project()">Create project</button>
+                    <button class="btn btn-secondary" data-dismiss="modal" type="button">Close</button>
+                    <button class="btn btn-primary" data-dismiss="modal" onclick="create_project()" type="button">Create
+                        project
+                    </button>
                 </div>
             </div>
         </div>
     </div>
-
-
 
 
     <div class="row" id="projects">
@@ -74,3 +93,4 @@
     <script>
         updateEstimatedSize();
     </script>
+</div>
