no 'bonjour/zeroconf' with snap, need fixed ip address !

--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
     <body>
         <!-- Page loader -->
         <div id="loading">
+            <img alt="Loading..." id="loading-image" src="assets/images/loading.gif"/>
         </div>
 
         <!-- Navbar code injected from /core/navbar.html -->
