--- a/client/core/home.html
+++ b/client/core/home.html
@@ -13,7 +13,7 @@
         </div>
 
         <div>
-            <a href="/assets/WC-Scanner.pdf" download>
+            <a href="/assets/Notice_d_utilisation.pdf" download>
                 <i class="fas fa-book" style="font-size: 2em"></i> How to
             </a>
         </div>
