--- a/client/core/home.html
+++ b/client/core/home.html
@@ -17,6 +17,13 @@
                 <i class="fas fa-book" style="font-size: 2em"></i> How to
             </a>
         </div>
+
+        <div>
+            <a href="/assets/notice_ios.pdf" download>
+                <i class="fas fa-book" style="font-size: 2em"></i> Build ios
+            </a>
+        </div>
+
     </aside>
 
     <aside class="aside aside-2" style="order: 3; flex: 1 auto; flex-direction: column; line-height: 6em">
@@ -28,6 +35,12 @@
         <div>
             <a href="https://github.com/Mahe-Thomas/WC-Scanner" target="_blank">
                 <i class="fab fa-github" style="font-size: 2em"></i> GitHub
+            </a>
+        </div>
+
+        <div>
+            <a href="/assets/notice_android.pdf" download>
+                <i class="fas fa-book" style="font-size: 2em"></i> Build android
             </a>
         </div>
 
