--- a/client/core/home.html
+++ b/client/core/home.html
@@ -7,19 +7,19 @@
 
     <aside class="aside aside-1" style=" order: 1; flex: 1 auto; flex-direction: column; line-height: 6em">
         <div>
-            <a href="/assets/WC-Scanner.pdf" download>
+            <a href="assets/WC-Scanner.pdf" download>
                 <i class="far fa-file-pdf" style="font-size: 2em"></i> Assembly
             </a>
         </div>
 
         <div>
-            <a href="/assets/Notice_d_utilisation.pdf" download>
+            <a href="assets/Notice_d_utilisation.pdf" download>
                 <i class="fas fa-book" style="font-size: 2em"></i> How to
             </a>
         </div>
 
         <div>
-            <a href="/assets/notice_ios.pdf" download>
+            <a href="assets/notice_ios.pdf" download>
                 <i class="fas fa-book" style="font-size: 2em"></i> Build ios
             </a>
         </div>
@@ -35,7 +35,7 @@
         </div>
 
         <div>
-            <a href="/assets/notice_android.pdf" download>
+            <a href="assets/notice_android.pdf" download>
                 <i class="fas fa-book" style="font-size: 2em"></i> Build android
             </a>
         </div>
